# DeSi

./: .env.example  .gitignore  404.html  AUTHORS  LICENSE  README.md  eval_ragas.py  evaluate.py  index.html  init.py  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: actions.yml  ci.yml  coveralls.yml  mkdocs-deploy.yml
data/eval/: baseline_run.jsonl  desi_eval_dataset.jsonl  desi_eval_dataset_refined.jsonl  ragas_per_sample.csv  ragas_per_sample.jsonl  ragas_per_sample_v1.jsonl
data/processed/: chunks.json  chunks.jsonl  enhanced_chunks.csv  enhanced_chunks.jsonl
desi_vectordb/: chroma.sqlite3
desi_vectordb/4ba94684-4eca-4e59-aa0f-797b96344b8a/: index_metadata.pickle
desi_vectordb/c5f92888-4633-4ccc-bdb0-78cbda3aceeb/: index_metadata.pickle
docs/: index.md
docs/explanations/: architecture.md  chunking-and-retrieval.md  conversation-memory.md  data-sources.md  index.md  overview.md  rag-pipeline.md  security-and-privacy.md
docs/howtos/: index.md  (+8 more)
explanations/: index.html
howtos/: index.html
prompts/: desi_query_prompt.md
reference/: index.html
scripts/: ingest_to_vectordb.py  integration_test.py  run_complete_pipeline.py
search/: search_index.json
src/: __main__.py
stylesheets/: extra.css
tests/: test_chromadb_collection.py  test_conversation_engine.py  test_conversation_memory.py  test_desi.py  test_ds_processor.py  test_integration.py  test_openbis_processor.py  test_openbis_scraper.py  test_processor.py  test_query.py  test_readthedocs_scraper.py  test_wikijs_scraper.py
tutorials/: index.html
(+75 files in other folders)
